fix: horizontal scroll

--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -84,21 +84,32 @@
     .fixContainer {
         border-bottom: 1px solid #D9D9D9 ;
     }
+    
+    .logo {
+        margin: unset;
+    }
 
     .input {
         margin: 0;
         width: 100%;
     }
     
+    .form {
+        margin: unset;
+        width: 70%;
+    }
     .searchContainer {
         display: flex;
         margin-bottom: 2em;
+        justify-content: space-around;
         width: 100%;
-        margin-left: 2.5em;
+        align-items: center;
     }
     
     .container {
         flex-direction: column;
-        margin-right: 0;
+        margin-right: 20px;
+        margin-left: 5px;
+    
     }
 }
